19/04 chua hien thong bao khi da duoc admin xu ly report